kubernetes/istio/virtualservice-bravo.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dotnet-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: dotnet-service
        port:
          number: 80
